--- a/loadBalancer/src/main/resources/application.yml
+++ b/loadBalancer/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8080
+
+instance:
+  name: load-balance
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
