--- a/dummyServer1/src/main/resources/application.yml
+++ b/dummyServer1/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: dummy
 server:
   port: 8082
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
