[feat] Read Me 작성

--- a/loadBalancer/src/main/resources/application.yml
+++ b/loadBalancer/src/main/resources/application.yml
@@ -10,9 +10,8 @@ spring:
     redis:
       host: redis-cache
       port: 6379
-
-instance:
-  name: load-balance
+  application:
+    name: load-balancer
 
 eureka:
   client:
