--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     build:
       context: ./dummyServer
       dockerfile: Dockerfile
+    container_name: dummy_server
     ports:
       - "8081:8081"
     networks:
@@ -30,6 +31,7 @@ services:
     build:
       context: ./dummyServer1
       dockerfile: Dockerfile
+    container_name: dummy_server1
     ports:
       - "8082:8082"
     networks:
@@ -41,6 +43,7 @@ services:
     build:
       context: ./loadBalancer
       dockerfile: Dockerfile
+    container_name: load_balancer
     ports:
       - "8080:8080"
     networks:
